k8s/local/bar/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
